--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body {
     background-color: #000000;
 }
 
+/* Hvidt logo øverst venstr hjørne */
 .image-container #logo {
     position: absolute;
     top: 10px;
@@ -37,16 +38,67 @@ body {
     width: 50px;
 }
 
+.overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+    z-index: 10;
+}
+
+.welcome-text {
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+.main-logo {
+    font-size: 3rem;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.subtext {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.button {
+    background-color: #75242C;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 1rem;
+    text-decoration: none;
+    transition: background-color 0.3s;
+}
+
+.button:hover {
+    background-color: #A4414B;
+}
+
+
+
+/* Forsidebillede og logo media queries */
 @media (min-width: 768px) {
     #front-page-image img {
         width: auto;
         height: auto;
     }
 
-   
+ /* hvidt logo bliver til stort logo på større skærme */
+    .image-container   
 #logo {
         content: url(/img/LogostorHvid.webp);
-        width: 400px;
+        width: 150px;
     }
 }
 /* header */
