--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,14 @@ body {
     background-color: #000000;
 }
 
+.image-container #forbillede
+{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
 /* Hvidt logo øverst venstr hjørne */
 .image-container #logo {
     position: absolute;
@@ -51,6 +59,7 @@ body {
 .welcome-text {
     font-size: 2rem;
     margin-bottom: 10px;
+    color: #EFFFFF;
 }
 
 .main-logo {
@@ -62,6 +71,7 @@ body {
 .subtext {
     font-size: 1.2rem;
     margin-bottom: 20px;
+    color: #EFFFFF;
 }
 
 .buttons {
@@ -79,12 +89,20 @@ body {
     font-size: 1rem;
     text-decoration: none;
     transition: background-color 0.3s;
+    transition: transform 0.3s;
+    width: 12.5em;
 }
 
 .button:hover {
     background-color: #A4414B;
+    transform: translateY(-3px) scale(1.03); 
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2); 
 }
 
+.image-container #logo:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s;
+}
 
 
 /* Forsidebillede og logo media queries */
@@ -94,10 +112,19 @@ body {
         height: auto;
     }
 
-    #logo {
+    .image-container #logo {
         content: url(/img/LogostorHvid.webp);
-        width: 150px;
+        width: 200px;
+        top: 25px;
+        left: 25px;
     }
+
+    .buttons {
+        flex-direction: row; /* Arrange buttons side-by-side */
+        justify-content: center; /* Center the buttons horizontally */
+        gap: 20px; /* Add some space between the buttons */
+    }
+
 }
 
 /* header */
@@ -124,6 +151,7 @@ body {
     padding: 20px;
     display: block;
     text-align: center;
+    font-size: 20px;
 }
 
 /* menu */
