--- a/css/style.css
+++ b/css/style.css
@@ -654,3 +654,108 @@ footer a:hover {
 .price {
     margin-left: auto;
 }
+
+/* Book bord formular */
+.content {
+    padding: 40px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.form-box {
+    background-color: #fff;
+    padding: 25px;
+    border-radius: 8px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 500px;
+    transition: all 0.4s ease;
+}
+
+.form-page {
+    display: none;
+}
+
+.form-page p {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+    font-family: Lato;
+}
+
+.form-page.active {
+    display: block;
+}
+
+.form-heading {
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+    text-align: center;
+    font-family: Oswald;
+}
+
+.form-label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+    font-family: Lato;
+}
+
+.form-input, .form-select, .form-textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 1rem;
+}
+
+.form-textarea {
+    resize: vertical;
+}
+
+.form-checkbox-container {
+    margin-bottom: 20px;
+}
+
+.form-checkbox-label {
+    display: block;
+    margin-bottom: 5px;
+    font-size: 0.9rem;
+    font-family: Lato;
+}
+
+.form-checkbox {
+    margin-right: 10px;
+}
+
+.form-button-group {
+    display: flex;
+    justify-content: space-between;
+    font-family: Lato;
+}
+
+.form-next-btn, .form-prev-btn, .form-confirm-btn {
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.form-prev-btn {
+    background-color: #6c757d;
+}
+
+.form-confirm-btn {
+    background-color: #28a745;
+    cursor: not-allowed;
+}
+
+.form-confirm-btn.enabled {
+    cursor: pointer;
+    background-color: #28a745;
+}
