--- a/css/style.css
+++ b/css/style.css
@@ -511,7 +511,7 @@ body {
 .main-article .image-article2 {
     display:none;
 }
-
+    
 .main-article h2 {
     font-family: Oswald;
 }
@@ -519,7 +519,7 @@ body {
 .section-taste, .section-reviews {
     display: flex;
     flex-direction: column;
-    gap: 20px; /* Space between elements in each section */
+    gap: 40px; /* Space between elements in each section */
 }
 
 .section-taste .content, .section-reviews .content {
@@ -829,10 +829,9 @@ footer a:hover {
     padding-right: 20px;
 }
 
-h3 {
+.menu-section h3 {
     display: flex;
     justify-content: space-between;
-
     padding: 20px;
 }
 .menu-item p {
@@ -892,7 +891,6 @@ h3 {
 .form-heading {
     font-size: 1.5rem;
     margin-bottom: 20px;
-    text-align: center;
     font-family: Oswald;
     letter-spacing: 2px;
 }
